<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" android:layout_height="fill_parent"
    android:fillViewport="true">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="pl.nstrefa.arkus.recipemaster.MainActivity"
        tools:showIn="@layout/activity_pizza_recipe">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/recipe_name"
            android:id="@+id/recipeName"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recipe_description"
            android:id="@+id/description"
            android:layout_below="@+id/recipeName"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="@dimen/text_left_margin"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/recipe_ingredients"
            android:id="@+id/ingredients"
            android:layout_below="@+id/description"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recipe_ingredients_list"
            android:id="@+id/ingredientsList"
            android:layout_below="@+id/ingredients"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="@dimen/text_left_margin" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/recipe_preparing"
            android:id="@+id/preparing"
            android:layout_below="@+id/ingredientsList"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recipe_preparing_list"
            android:id="@+id/preparingList"
            android:layout_below="@+id/preparing"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="@dimen/text_left_margin" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/recipe_images"
            android:id="@+id/images"
            android:layout_below="@+id/preparingList"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_centerHorizontal="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/images"
            android:id="@+id/imagesLayout"
            android:layout_centerVertical="true"
            android:gravity="center_vertical|center_horizontal">

            <ImageView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/pizzaImage1"
                android:layout_margin="@dimen/image_margin"
                android:contentDescription="@string/recipe_name"
                android:layout_gravity="center_vertical"/>

            <ImageView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/pizzaImage2"
                android:layout_margin="@dimen/image_margin"
                android:contentDescription="@string/recipe_name"
                android:layout_gravity="center_vertical"/>

            <ImageView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/pizzaImage3"
                android:layout_margin="@dimen/image_margin"
                android:contentDescription="@string/recipe_name"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>

        <android.support.v4.widget.Space
            android:id="@+id/space"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@+id/imagesLayout"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

    </RelativeLayout>
</ScrollView>